# personal-continuous-integrations

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .sqlfluff  Dockerfile  Dockerfile.test  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_feature_request.md  03_security_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/hello-world-docker-action/: Dockerfile  README.md
.github/actions/test-automation-docker-action/: CHANGELOG.md  DBT_TEST_COMMAND.md  Dockerfile  README.md  action.yml
.github/actions/write-protection-docker-action/: CHANGELOG.md  Dockerfile  README.md  action.yml  write-protection-pr.sh
.github/workflows/: publish-release-assets.yml
PULL_REQUEST_TEMPLATE/: 01_generic_pull_request.md
resources/config/: integration_test.yaml  sample_archive_config.yaml  sample_restore_config.yaml
scripts/: write-protection-pr.sh
src/automations/: __main__.py  executor.py  logging.py
src/automations/commands/: constants.py  constatns.py  dbt_test.py  integration_test.py  write_protection_hook.py
src/automations/commands/base/: dbt_command.py
src/automations/integration/: argument.py  executor.py
src/automations/integration/test_commands/: constants.py  dbt_test.py
src/automations/integration/test_commands/base/: __init__.py  dbt_command.py
src/customizable_continuous_integration/automations/: __init__.py  __main__.py
src/customizable_continuous_integration/automations/bigquery_archiver/: CHANGELOG.md  README.md  __init__.py
src/customizable_continuous_integration/automations/bigquery_archiver/entity/: __init__.py  archive.py  archive_entities.py  base.py  bigquery_metadata.py  dataset.py  external.py  routine.py  table.py  view.py
src/customizable_continuous_integration/automations/bigquery_archiver/executor/: __init__.py  archive.py  fetch.py  restore.py
src/customizable_continuous_integration/automations/commands/: README.md  archive_bigquery.py  constants.py  integration_test.py  run_shell.py  write_protection_hook.py
src/customizable_continuous_integration/automations/integration/: README.md  __init__.py  argument.py  executor.py  logging.py
src/customizable_continuous_integration/automations/integration/test_commands/: __init__.py  constants.py  dbt_action.py  dbt_test.py
src/customizable_continuous_integration/automations/integration/test_commands/base/: base_command.py  dbt_command.py
src/customizable_continuous_integration/common_libs/: collections.py
src/customizable_continuous_integration/common_libs/github_apis/: __init__.py  repository.py
src/customizable_continuous_integration/common_libs/graph/dag/: builder.py  entity.py  node.py
src/customizable_continuous_integration/common_libs/sql/parsing/: extract_dependencies.py
tests/scripts/: bigquery_archiver_dev_datasets.sql
