[project]
name = "customizable_continuous_integration"
version = "1.4.4"
description = "The Ryan's CI automation project"
authors = [{ name = "Ryan,Gao", email = "ryangao-au@outlook.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10.0,<3.13"
dependencies = [
    "dbt-core<=1.10.13",
    "dbt-bigquery<=1.10.2",
    "gitpython~=3.1.43",
    "retrying~=1.3.4",
    "numpy<2.0.0",
    "pre-commit~=4.3.0",
    "PyGithub~=2.4.0",
    "fsspec==2025.9.0",
    "gcsfs==2025.9.0",
    "sqlglot==26.7.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black~=24.8.0",
    "flake8~=7.1.1",
    "flake8-docstrings~=1.7.0",
    "flake8-bugbear~=24.8.19",
    "flake8-builtins~=2.5.0",
    "flake8-comprehensions~=3.15.0",
    "pep8-naming~=0.13.3",
    "isort~=5.13.2",
    "mypy~=1.11.1",
    "sqlfluff~=3.1.1",
    "shandy-sqlfmt[jinjafmt]~=0.23.2",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]


[tool.poetry.scripts]
ci_cli = "customizable_continuous_integration.automations.__main__:main"

#####################
#    Tool Configs   #
#####################

# black
[tool.black]
line-length = 150
include = '\.pyi?$'
force-exclude = '^(.*/|)\.?snap\_.*\.py$'


# flake8
# >>> Flake8 does not support `pyproject.toml`, use `.flake8` instead <<<

# flake8-docstring
[tool.pydocstyle]
convention = "google"

# isort
[tool.isort]
profile = "black"
skip_glob = ['**/tests/**/snap_test*.py']
line_length = 150


[tool.sqlfmt]
line_length = 120
dialect="polyglot"
exclude=["dbt_packages/**/*", "target/**/*.sql"]
