[project]
name = "customizable_continuous_integration"
version = "1.4.5"
description = "The Ryan's CI automation project"
authors = [{ name = "Ryan,Gao", email = "ryangao-au@outlook.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10.0,<3.13"
dependencies = [
    "dbt-core<=1.10.13",
    "dbt-bigquery<=1.10.2",
    "gitpython~=3.1.45",
    "retrying~=1.4.2",
    "numpy<2.0.0",
    "pre-commit~=4.3.0",
    "PyGithub~=2.8.1",
    "fsspec==2025.9.0",
    "gcsfs==2025.9.0",
    "sqlglot==27.26.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black~=25.9.0",
    "flake8~=7.3.0",
    "flake8-docstrings~=1.7.0",
    "flake8-bugbear~=24.12.12",
    "flake8-builtins~=3.0.0",
    "flake8-comprehensions~=3.17.0",
    "pep8-naming~=0.15.1",
    "isort~=6.1.0",
    "mypy~=1.18.2",
    "sqlfluff~=3.4.2",
    "shandy-sqlfmt[jinjafmt]~=0.27.0",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]


[tool.poetry.scripts]
ci_cli = "customizable_continuous_integration.automations.__main__:main"

#####################
#    Tool Configs   #
#####################

# black
[tool.black]
line-length = 150
include = '\.pyi?$'
force-exclude = '^(.*/|)\.?snap\_.*\.py$'


# flake8
# >>> Flake8 does not support `pyproject.toml`, use `.flake8` instead <<<

# flake8-docstring
[tool.pydocstyle]
convention = "google"

# isort
[tool.isort]
profile = "black"
skip_glob = ['**/tests/**/snap_test*.py']
line_length = 150


[tool.sqlfmt]
line_length = 120
dialect="polyglot"
exclude=["dbt_packages/**/*", "target/**/*.sql"]
